# Language_Acquisition_iCub

./: 0407_0312PM_Size20_Color24_Shape18.mat  GMM_EM_Images_Features_Clustering.ipynb  Notes on Data Matrices.txt  README.md  icubSim_object_train_log.txt
C++/: cluster_info.txt  cluster_info_raw.txt  recognized_words_to_cluster.txt  shape_cluster.txt
Demo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  color_cluster.txt  demo_test  demo_test.cpp  ground_truth_test  ground_truth_to_cluster_indices.txt  iCub_Prediction.txt  label_info_raw.txt  opencv_test  read_text  read_text.cpp  shape_cluster.txt  size_cluster.txt  words_to_cluster_indicies_raw.txt
Demo/label_files/: color_cluster.txt  label_info.txt  label_info_raw (1).txt  recognized_color_cluster.txt  recognized_shape_cluster.txt  recognized_size_cluster.txt  recognized_words_to_cluster.txt  size_cluster.txt
audio/: phones1_test.mlf  result_actual.mlf  test_actual.scp  triphones1_actual  words_test.mlf
audio/hmm12/: hmmdefs  macros  stats
vision/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  image_save.cpp  save_image.cpp  save_img
